--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/node": "^18.15.0",
+		"@types/typescript": "^2.0.0",
 		"install": "^0.13.0",
 		"ts-node": "^10.9.1"
 	},
@@ -14,7 +15,8 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^7.0.2",
-		"nodemon": "^2.0.21"
+		"nodemon": "^2.0.21",
+		"typescript": "^5.0.2"
 	},
 	"name": "epicurebackend",
 	"description": "",
